syntax = "proto3";
option go_package = "internal/models";
package service;

message Empty {}

message PublicKey {
  string value = 1;
}


service Service {
  rpc GenAndSendPublicKey (Empty) returns (PublicKey) {}
  rpc SetRemotePublicKey (PublicKey) returns (Empty) {}

  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
